--- a/practice/src/package.json
+++ b/practice/src/package.json
@@ -11,7 +11,20 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-image": "^6.0.0",
+    "gulp-imagemin": "^6.2.0",
+    "gulp-jpeg-2000": "^1.1.2",
+    "gulp-js-minify": "0.0.3",
+    "gulp-minify": "^3.1.0",
     "gulp-sass": "^4.0.2",
+    "gulp-uglify": "^3.0.2",
     "node-sass": "^4.13.0"
+  },
+  "dependencies": {
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-tinypng-compress": "^1.2.5"
   }
 }
